Contrast Fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,7 +34,7 @@
   }
   
   footer a {
-    color: #69342a;
+    color: #87392a;
   }
   .updated {
     margin: .25rem;
